Result JUNE 9/Sunday/2024

--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -845,11 +845,11 @@
                     <td class="winning" id="lbw">75</td>
 
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">13</td>
+                    <td class="machine">46</td>
+                    <td class="machine">90</td>
+                    <td class="machine">18</td>
+                    <td class="machine" id="lbm">72</td>
                 </tr>
             </tbody> 
 
