--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">friday 07/06/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">53 - 44 - 78 - 27 - 23</p>
-                <p class="machine">79 - 31 - 37 - 56 - 10</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">35 - 5 - 15 - 9 - 34</p>
-                <p class="machine">11 - 85 - 12 - 62 - 54</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">48 - 32 - 3 - 12 - 87</p>
-                <p class="machine">68 - 50 - 5 - 57 - 51</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">57 - 10 - 85 - 63 - 35</p>
-                <p class="machine">27 - 6 - 56 - 68 - 87</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">65 - 9 - 21 - 10 - 35</p>
-                <p class="machine">88 - 66 - 26 - 63 - 5</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">40 - 45 - 4 - 23 - 12</p>
-                <p class="machine">48 - 88 - 47 - 77 - 63</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">saturday 08/06/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -264,12 +230,46 @@
             <article>
                 <h3 class="game">National</h3>
                 <p class="winning">10 - 1 - 9 - 77 - 75</p>
-                <p class="machine"></p>        
+                <p class="machine">13 - 46 - 90 - 18 - 72</p>        
             </article>
             <article>
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">62 - 46 - 82 - 13 - 22</p>
                 <p class="machine">61 - 90 - 68 - 12 - 25</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">sunday 09/06/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">80 - 71 - 7 - 14 - 59</p>
+                <p class="machine">85 - 52 - 40 - 3 - 8</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">53 - 68 - 50 - 55 - 54</p>
+                <p class="machine">58 - 28 - 43 - 21 - 11</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">2 - 39 - 3 - 73 - 29</p>
+                <p class="machine">34 - 7 - 70 - 84 - 22</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">19 - 76 - 24 - 14 - 38</p>
+                <p class="machine">54 - 32 - 70 - 84 - 71</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">53 - 69 - 81 - 63 - 26</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">16 - 40 - 51 - 15 - 5</p>
+                <p class="machine">75 - 69 - 77 - 9 - 52</p>        
             </article>
         </section>
     </div>
