--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">saturday 08/06/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">70 - 46 - 47 - 29 - 76</p>
-                <p class="machine">9 - 65 - 59 - 3 - 16</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">79 - 40 - 33 - 24 - 42</p>
-                <p class="machine">71 - 9 - 67 - 12 - 6</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">44 - 76 - 8 - 36 - 21</p>
-                <p class="machine">3 - 74 - 61 - 57 - 33</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">20 - 33 - 86 - 14 - 32</p>
-                <p class="machine">67 - 88 - 39 - 27 - 41</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">10 - 1 - 9 - 77 - 75</p>
-                <p class="machine">13 - 46 - 90 - 18 - 72</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">62 - 46 - 82 - 13 - 22</p>
-                <p class="machine">61 - 90 - 68 - 12 - 25</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">sunday 09/06/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -264,12 +230,46 @@
             <article>
                 <h3 class="game">Aseda</h3>
                 <p class="winning">53 - 69 - 81 - 63 - 26</p>
-                <p class="machine"></p>        
+                <p class="machine">70 - 77 - 29 - 75 - 6</p>        
             </article>
             <article>
                 <h3 class="game">Tota</h3>
                 <p class="winning">16 - 40 - 51 - 15 - 5</p>
                 <p class="machine">75 - 69 - 77 - 9 - 52</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">monday 10/06/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">66 - 59 - 18 - 81 - 53</p>
+                <p class="machine">56 - 64 - 48 - 20 - 76</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">17 - 39 - 11 - 8 - 41</p>
+                <p class="machine">78 - 56 - 84 - 73 - 59</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">65 - 49 - 71 - 18 - 46</p>
+                <p class="machine">15 - 80 - 29 - 86 - 54</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
