Result -JUNE 10/Monday/2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -257,19 +257,19 @@
                 <p class="machine">15 - 80 - 29 - 86 - 54</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Metro</h3>
+                <p class="winning">50 - 19 - 8 - 72 - 25</p>
+                <p class="machine">42 - 88 - 31 - 48 - 5</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">53 - 70 - 27 - 74 - 54</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">International</h3>
+                <p class="winning">51 - 37 - 5 - 43 - 25</p>
+                <p class="machine">42 - 14 - 27 - 32 - 68</p>        
             </article>
         </section>
     </div>
