--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -874,11 +874,11 @@
                     <td class="winning" id="lbw">54</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">43</td>
+                    <td class="machine">52</td>
+                    <td class="machine">3</td>
+                    <td class="machine">19</td>
+                    <td class="machine" id="lbm">48</td>
                 </tr>
             </tbody> 
 
