--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">sunday 09/06/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">80 - 71 - 7 - 14 - 59</p>
-                <p class="machine">85 - 52 - 40 - 3 - 8</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">53 - 68 - 50 - 55 - 54</p>
-                <p class="machine">58 - 28 - 43 - 21 - 11</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">2 - 39 - 3 - 73 - 29</p>
-                <p class="machine">34 - 7 - 70 - 84 - 22</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">19 - 76 - 24 - 14 - 38</p>
-                <p class="machine">54 - 32 - 70 - 84 - 71</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">53 - 69 - 81 - 63 - 26</p>
-                <p class="machine">70 - 77 - 29 - 75 - 6</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">16 - 40 - 51 - 15 - 5</p>
-                <p class="machine">75 - 69 - 77 - 9 - 52</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">monday 10/06/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -264,12 +230,46 @@
             <article>
                 <h3 class="game">MSP</h3>
                 <p class="winning">53 - 70 - 27 - 74 - 54</p>
-                <p class="machine"></p>        
+                <p class="machine">43 - 52 - 3 - 19 - 48</p>        
             </article>
             <article>
                 <h3 class="game">International</h3>
                 <p class="winning">51 - 37 - 5 - 43 - 25</p>
                 <p class="machine">42 - 14 - 27 - 32 - 68</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">tuesday 11/06/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">73 - 12 - 72 - 66 - 58</p>
+                <p class="machine">71 - 26 - 17 - 13 - 34</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">5 - 23 - 80 - 60 - 86</p>
+                <p class="machine">55 - 6 - 32 - 72 - 88</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">90 - 50 - 28 - 16 - 31</p>
+                <p class="machine">44 - 76 - 2 - 69 - 42</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
