Result JUNE 11/Tuesday/2024

--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -865,14 +865,14 @@
             <tbody>
                 <tr>
                     <td class="serial-num">24</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Jun 11th</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">63</td>
+                    <td class="winning">82</td>
+                    <td class="winning">76</td>
+                    <td class="winning">89</td>
+                    <td class="winning" id="lbw">59</td>
 
                     <!-- machine-->
                     <td class="machine" id="fbm"></td>
