--- a/GAMES/10Super.html
+++ b/GAMES/10Super.html
@@ -1655,6 +1655,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">47</td>
+                    <td class="days"><small>Jun 11th tues</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">25</td>
+                    <td class="winning">36</td>
+                    <td class="winning">48</td>
+                    <td class="winning">43</td>
+                    <td class="winning" id="lbw">49</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">86</td>
+                    <td class="machine">14</td>
+                    <td class="machine">70</td>
+                    <td class="machine">5</td>
+                    <td class="machine" id="lbm">79</td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day48-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">48</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
