--- a/GAMES/9Club-m.html
+++ b/GAMES/9Club-m.html
@@ -1655,6 +1655,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">47</td>
+                    <td class="days"><small>Jun 11th tues</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">83</td>
+                    <td class="winning">25</td>
+                    <td class="winning">66</td>
+                    <td class="winning">75</td>
+                    <td class="winning" id="lbw">6</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">11</td>
+                    <td class="machine">7</td>
+                    <td class="machine">77</td>
+                    <td class="machine">33</td>
+                    <td class="machine" id="lbm">21</td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day48-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">48</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
