--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -257,19 +257,19 @@
                 <p class="machine">44 - 76 - 2 - 69 - 42</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">83 - 25 - 66 - 75 - 6</p>
+                <p class="machine">11 - 7 - 77 - 33 - 21</p>        
+            </article>
+            <article>
+                <h3 class="game">LUCKY-G</h3>
+                <p class="winning">63 - 82 - 76 - 89 - 59</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Super</h3>
+                <p class="winning">25 - 36 - 48 - 43 - 49</p>
+                <p class="machine">86 - 14 - 70 - 5 - 79</p>        
             </article>
         </section>
     </div>
