--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -875,6 +875,28 @@
                     <td class="winning" id="lbw">59</td>
 
                     <!-- machine-->
+                    <td class="machine" id="fbm">66</td>
+                    <td class="machine">32</td>
+                    <td class="machine">37</td>
+                    <td class="machine">65</td>
+                    <td class="machine" id="lbm">81</td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day25-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">25</td>
+                    <td class="days"><small></small></td>
+                
+                    <!-- winning-->
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning" id="lbw"></td>
+    
+                    <!-- machine-->
                     <td class="machine" id="fbm"></td>
                     <td class="machine"></td>
                     <td class="machine"></td>
