--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">monday 10/06/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">66 - 59 - 18 - 81 - 53</p>
-                <p class="machine">56 - 64 - 48 - 20 - 76</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">17 - 39 - 11 - 8 - 41</p>
-                <p class="machine">78 - 56 - 84 - 73 - 59</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">65 - 49 - 71 - 18 - 46</p>
-                <p class="machine">15 - 80 - 29 - 86 - 54</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">50 - 19 - 8 - 72 - 25</p>
-                <p class="machine">42 - 88 - 31 - 48 - 5</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">53 - 70 - 27 - 74 - 54</p>
-                <p class="machine">43 - 52 - 3 - 19 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">51 - 37 - 5 - 43 - 25</p>
-                <p class="machine">42 - 14 - 27 - 32 - 68</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">tuesday 11/06/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -264,12 +230,46 @@
             <article>
                 <h3 class="game">LUCKY-G</h3>
                 <p class="winning">63 - 82 - 76 - 89 - 59</p>
-                <p class="machine"></p>        
+                <p class="machine">66 - 32 - 37 - 65 - 81</p>        
             </article>
             <article>
                 <h3 class="game">Super</h3>
                 <p class="winning">25 - 36 - 48 - 43 - 49</p>
                 <p class="machine">86 - 14 - 70 - 5 - 79</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">wednesday 12/06/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">11 - 84 - 5 - 71 - 53</p>
+                <p class="machine">29 - 7 - 70 - 24 - 30</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">62 - 80 - 78 - 32 - 52</p>
+                <p class="machine">22 - 29 - 6 - 89 - 16</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">56 - 66 - 11 - 5 - 78</p>
+                <p class="machine">45 - 23 - 14 - 44 - 30</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
