Result JUNE 12/Wednesday/2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -257,19 +257,19 @@
                 <p class="machine">45 - 23 - 14 - 44 - 30</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">41 - 82 - 25 - 59 - 78</p>
+                <p class="machine">19 - 89 - 10 - 88 - 74</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">35 - 56 - 42 - 40 - 82</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">64 - 88 - 21 - 72 - 28</p>
+                <p class="machine">65 - 89 - 47 - 36 - 83</p>        
             </article>
         </section>
     </div>
