--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -874,11 +874,11 @@
                     <td class="winning" id="lbw">82</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">62</td>
+                    <td class="machine">6</td>
+                    <td class="machine">3</td>
+                    <td class="machine">68</td>
+                    <td class="machine" id="lbm">28</td>
                 </tr>
             </tbody> 
 
