--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">tuesday 11/06/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">73 - 12 - 72 - 66 - 58</p>
-                <p class="machine">71 - 26 - 17 - 13 - 34</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">5 - 23 - 80 - 60 - 86</p>
-                <p class="machine">55 - 6 - 32 - 72 - 88</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">90 - 50 - 28 - 16 - 31</p>
-                <p class="machine">44 - 76 - 2 - 69 - 42</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">83 - 25 - 66 - 75 - 6</p>
-                <p class="machine">11 - 7 - 77 - 33 - 21</p>        
-            </article>
-            <article>
-                <h3 class="game">LUCKY-G</h3>
-                <p class="winning">63 - 82 - 76 - 89 - 59</p>
-                <p class="machine">66 - 32 - 37 - 65 - 81</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">25 - 36 - 48 - 43 - 49</p>
-                <p class="machine">86 - 14 - 70 - 5 - 79</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">wednesday 12/06/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -264,12 +230,46 @@
             <article>
                 <h3 class="game">Midweek</h3>
                 <p class="winning">35 - 56 - 42 - 40 - 82</p>
-                <p class="machine"></p>        
+                <p class="machine">62 - 6 - 3 - 68 - 28</p>        
             </article>
             <article>
                 <h3 class="game">Lucky</h3>
                 <p class="winning">64 - 88 - 21 - 72 - 28</p>
                 <p class="machine">65 - 89 - 47 - 36 - 83</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">thursday 13/06/2024</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">38 - 86 - 18 - 60 - 68</p>
+                <p class="machine">40 - 19 - 21 - 15 - 26</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">41 - 83 - 2 - 37 - 45</p>
+                <p class="machine">51 - 31 - 80 - 69 - 84</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">41 - 13 - 40 - 17 - 43</p>
+                <p class="machine">67 - 19 - 58 - 56 - 55</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
