--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -257,19 +257,19 @@
                 <p class="machine">67 - 19 - 58 - 56 - 55</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">International</h3>
+                <p class="winning">49 - 73 - 32 - 10 - 83</p>
+                <p class="machine">50 - 77 - 80 - 7 - 18</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">76 - 7 - 67 - 81 - 87</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Bingo</h3>
+                <p class="winning">85 - 36 - 76 - 33 - 73</p>
+                <p class="machine">37 - 83 - 19 - 6 - 21</p>        
             </article>
         </section>
     </div>
