--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -874,11 +874,11 @@
                     <td class="winning" id="lbw">87</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">14</td>
+                    <td class="machine">9</td>
+                    <td class="machine">33</td>
+                    <td class="machine">15</td>
+                    <td class="machine" id="lbm">40</td>
                 </tr>
             </tbody> 
 
