--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">wednesday 12/06/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">11 - 84 - 5 - 71 - 53</p>
-                <p class="machine">29 - 7 - 70 - 24 - 30</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">62 - 80 - 78 - 32 - 52</p>
-                <p class="machine">22 - 29 - 6 - 89 - 16</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">56 - 66 - 11 - 5 - 78</p>
-                <p class="machine">45 - 23 - 14 - 44 - 30</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">41 - 82 - 25 - 59 - 78</p>
-                <p class="machine">19 - 89 - 10 - 88 - 74</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">35 - 56 - 42 - 40 - 82</p>
-                <p class="machine">62 - 6 - 3 - 68 - 28</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">64 - 88 - 21 - 72 - 28</p>
-                <p class="machine">65 - 89 - 47 - 36 - 83</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">thursday 13/06/2024</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -264,12 +230,46 @@
             <article>
                 <h3 class="game">Fortune</h3>
                 <p class="winning">76 - 7 - 67 - 81 - 87</p>
-                <p class="machine"></p>        
+                <p class="machine">14 - 9 - 33 - 15 - 40</p>        
             </article>
             <article>
                 <h3 class="game">Bingo</h3>
                 <p class="winning">85 - 36 - 76 - 33 - 73</p>
                 <p class="machine">37 - 83 - 19 - 6 - 21</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">friday 14/06/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">31 - 6 - 7 - 66 - 87</p>
+                <p class="machine">70 - 60 - 68 - 72 - 20</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">36 - 19 - 80 - 89 - 50</p>
+                <p class="machine">90 - 39 - 1 - 77 - 54</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">1 - 33 - 16 - 51 - 54</p>
+                <p class="machine">71 - 80 - 6 - 37 - 30</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
