Result JUNE 14/Friday/2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -257,19 +257,19 @@
                 <p class="machine">71 - 80 - 6 - 37 - 30</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">1 - 16 - 38 - 85 - 23</p>
+                <p class="machine">74 - 24 - 37 - 71 - 40</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">15 - 58 - 16 - 34 - 22</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Vag</h3>
+                <p class="winning">15 - 9 - 81 - 24 - 78</p>
+                <p class="machine">60 - 45 - 31 - 12 - 77</p>        
             </article>
         </section>
     </div>
