--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -858,14 +858,14 @@
             <tbody>
                 <tr>
                     <td class="serial-num">24</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Jun 14th</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">15</td>
+                    <td class="winning">58</td>
+                    <td class="winning">16</td>
+                    <td class="winning">34</td>
+                    <td class="winning" id="lbw">22</td>
     
                     <!-- machine-->
                     <td class="machine" id="fbm"></td>
