Result JUNE 15/Saturday/2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">thursday 13/06/2024</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">38 - 86 - 18 - 60 - 68</p>
-                <p class="machine">40 - 19 - 21 - 15 - 26</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">41 - 83 - 2 - 37 - 45</p>
-                <p class="machine">51 - 31 - 80 - 69 - 84</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">41 - 13 - 40 - 17 - 43</p>
-                <p class="machine">67 - 19 - 58 - 56 - 55</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">49 - 73 - 32 - 10 - 83</p>
-                <p class="machine">50 - 77 - 80 - 7 - 18</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">76 - 7 - 67 - 81 - 87</p>
-                <p class="machine">14 - 9 - 33 - 15 - 40</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">85 - 36 - 76 - 33 - 73</p>
-                <p class="machine">37 - 83 - 19 - 6 - 21</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">friday 14/06/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -270,6 +236,40 @@
                 <h3 class="game">Vag</h3>
                 <p class="winning">15 - 9 - 81 - 24 - 78</p>
                 <p class="machine">60 - 45 - 31 - 12 - 77</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">saturday 15/06/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">44 - 2 - 52 - 11 - 25</p>
+                <p class="machine">63 - 70 - 36 - 1 - 14</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">10 - 5 - 48 - 88 - 53</p>
+                <p class="machine">33 - 55 - 30 - 17 - 20</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">60 - 26 - 24 - 13 - 87</p>
+                <p class="machine">76 - 75 - 7 - 85 - 50</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">67 - 41 - 39 - 28 - 45</p>
+                <p class="machine">72 - 48 - 31 - 53 - 76</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">45 - 86 - 63 - 4 - 34</p>
+                <p class="machine">71 - 33 - 53 - 20 - 89</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">75 - 19 - 17 - 67 - 39</p>
+                <p class="machine">58 - 28 - 4 - 73 - 42</p>        
             </article>
         </section>
     </div>
