--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">friday 14/06/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">31 - 6 - 7 - 66 - 87</p>
-                <p class="machine">70 - 60 - 68 - 72 - 20</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">36 - 19 - 80 - 89 - 50</p>
-                <p class="machine">90 - 39 - 1 - 77 - 54</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">1 - 33 - 16 - 51 - 54</p>
-                <p class="machine">71 - 80 - 6 - 37 - 30</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">1 - 16 - 38 - 85 - 23</p>
-                <p class="machine">74 - 24 - 37 - 71 - 40</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">15 - 58 - 16 - 34 - 22</p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game">Vag</h3>
-                <p class="winning">15 - 9 - 81 - 24 - 78</p>
-                <p class="machine">60 - 45 - 31 - 12 - 77</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">saturday 15/06/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -270,6 +236,40 @@
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">75 - 19 - 17 - 67 - 39</p>
                 <p class="machine">58 - 28 - 4 - 73 - 42</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">sunday 16/06/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">12 - 89 - 1 - 70 - 8</p>
+                <p class="machine">45 - 25 - 43 - 84 - 81</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">77 - 10 - 75 - 35 - 65</p>
+                <p class="machine">21 - 60 - 72 - 48 - 14</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">1 - 54 - 84 - 3 - 86</p>
+                <p class="machine">8 - 19 - 21 - 5 - 34</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">10 - 45 - 62 - 49 - 11</p>
+                <p class="machine">52 - 54 - 87 - 89 - 48</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">87 - 15 - 27 - 50 - 48</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">18 - 63 - 46 - 47 - 86</p>
+                <p class="machine">2 - 43 - 78 - 89 - 29</p>        
             </article>
         </section>
     </div>
