--- a/plan.html
+++ b/plan.html
@@ -259,6 +259,16 @@
         </nav>
     </header>
     <main>
+
+        <!-- <aside class="facebook-embed" style="margin: 100rem auto;"> -->
+            <!-- <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FvisuaLottoBoard%2Fposts%2Fpfbid0gP4uQdUetY1DYsQi6VnqZnufrFjYmFiKkKVtrjjTQoh4fUJYiin8Hi5ASz5VwU9Pl&show_text=true&width=500" width="500" height="531" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe> -->
+
+        <!-- </aside> -->
+
+        <!-- <aside class="twitter-embed">
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">🎱 Premier SUPER - Tuesday 11/June/24 <br><br>⏳ Closes - 22:25 PM <br><br>Perm: 2 - 82 - 5 - 51 - 56 <br><br>Nap: 2 - 82 <br><br>Nap: 5 - 51<a href="https://twitter.com/hashtag/Super?src=hash&amp;ref_src=twsrc%5Etfw">#Super</a> <a href="https://twitter.com/hashtag/Lotto?src=hash&amp;ref_src=twsrc%5Etfw">#Lotto</a> <a href="https://twitter.com/hashtag/BABAIJEBU?src=hash&amp;ref_src=twsrc%5Etfw">#BABAIJEBU</a> <a href="https://t.co/FQwE6GQJOB">pic.twitter.com/FQwE6GQJOB</a></p>&mdash; Visual Lotto Board (@visuaLottoBoard) <a href="https://twitter.com/visuaLottoBoard/status/1800608821469225390?ref_src=twsrc%5Etfw">June 11, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+        </aside> -->
         <div>
             
         </div>
