--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -886,11 +886,11 @@
                     <td class="winning" id="lbw">48</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">20</td>
+                    <td class="machine">62</td>
+                    <td class="machine">60</td>
+                    <td class="machine">80</td>
+                    <td class="machine" id="lbm">72</td>
                 </tr>
             </tbody>
 
