--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">saturday 15/06/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">44 - 2 - 52 - 11 - 25</p>
-                <p class="machine">63 - 70 - 36 - 1 - 14</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">10 - 5 - 48 - 88 - 53</p>
-                <p class="machine">33 - 55 - 30 - 17 - 20</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">60 - 26 - 24 - 13 - 87</p>
-                <p class="machine">76 - 75 - 7 - 85 - 50</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">67 - 41 - 39 - 28 - 45</p>
-                <p class="machine">72 - 48 - 31 - 53 - 76</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">45 - 86 - 63 - 4 - 34</p>
-                <p class="machine">71 - 33 - 53 - 20 - 89</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">75 - 19 - 17 - 67 - 39</p>
-                <p class="machine">58 - 28 - 4 - 73 - 42</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">sunday 16/06/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -264,12 +230,46 @@
             <article>
                 <h3 class="game">Aseda</h3>
                 <p class="winning">87 - 15 - 27 - 50 - 48</p>
-                <p class="machine"></p>        
+                <p class="machine">20 - 62 - 60 - 80 - 72</p>        
             </article>
             <article>
                 <h3 class="game">Tota</h3>
                 <p class="winning">18 - 63 - 46 - 47 - 86</p>
                 <p class="machine">2 - 43 - 78 - 89 - 29</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">Monday 17/06/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">12 - 18 - 28 - 31 - 13</p>
+                <p class="machine">65 - 47 - 75 - 83 - 61</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">67 - 33 - 80 - 76 - 2</p>
+                <p class="machine">60 - 26 - 90 - 69 - 82</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">56 - 80 - 17 - 22 - 65</p>
+                <p class="machine">3 - 30 - 55 - 40 - 51</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
