Result JUNE 17/Monday/2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -257,14 +257,14 @@
                 <p class="machine">3 - 30 - 55 - 40 - 51</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Metro</h3>
+                <p class="winning">68 - 9 - 53 - 48 - 51</p>
+                <p class="machine">22 - 59 - 27 - 49 - 60</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">International</h3>
+                <p class="winning">10 - 66 - 5 - 45 - 65</p>
+                <p class="machine">85 - 29 - 90 - 44 - 37</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
